--- a/crates/agentfs-fuse-host/Cargo.toml
+++ b/crates/agentfs-fuse-host/Cargo.toml
@@ -14,7 +14,7 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 clap = { workspace = true }
 tracing-subscriber = { workspace = true }
-crossbeam-channel = "0.5"
+crossbeam-queue = "0.3"
 
 serde_json = { workspace = true }
 libc = "0.2"
