Revert "feat(fuse): add lock-free write dispatcher and release perf logs"
This reverts commit f1219ec291e2d4e51b056946447d0029a9b15cf4.

--- a/crates/agentfs-fuse-host/Cargo.toml
+++ b/crates/agentfs-fuse-host/Cargo.toml
@@ -14,7 +14,7 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 clap = { workspace = true }
 tracing-subscriber = { workspace = true }
-crossbeam-queue = "0.3"
+crossbeam-channel = "0.5"
 
 serde_json = { workspace = true }
 libc = "0.2"
