build(cargo): Vendor `tui-textarea` through cargo and promote it to a workspace dep

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -145,7 +145,10 @@ eventsource-client = "0.13"
 # Terminal UI
 ratatui = "0.29"
 crossterm = "0.28"
-tui-textarea = { path = "vendor/tui-textarea", features = ["search"] }
+
+tui-textarea = { git = "https://github.com/blocksense-network/tui-textarea", branch = "agent-harbor", features = [
+  "search",
+] }
 
 # Validation
 validator = { version = "0.20", features = ["derive"] }
