--- a/tests/tools/mock-tui-dashboard/Cargo.toml
+++ b/tests/tools/mock-tui-dashboard/Cargo.toml
@@ -13,7 +13,7 @@ anyhow = "1.0"
 chrono = "0.4"
 rand = "0.8"
 image = { version = "0.25", default-features = false, features = ["png"] }
-tui-textarea = { version = "0.7.0", features = ["search"] }
+tui-textarea = { workspace = true }
 tui-input = "0.10"
 crossbeam-channel = "0.5"
 ctrlc = "3.4"
