feat: add fuse passthrough instrumentation   Enabled FsCore to expose backing paths and size-refresh helpers so the FUSE host can hand real backing FDs to the kernel, then integrated Linux-only passthrough wiring with metrics,   EPERM fallback detection, and doc updates so we can analyze adoption before re-running the perf suites.

--- a/crates/agentfs-fuse-host/Cargo.toml
+++ b/crates/agentfs-fuse-host/Cargo.toml
@@ -33,4 +33,4 @@ tokio = { version = "1.0", features = ["rt", "macros"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 # FUSE dependency is Linux-only and optional; enabled via the `fuse` feature
-fuser = { version = "0.16", optional = true }
+fuser = { version = "0.16", optional = true, features = ["abi-7-40"] }
