--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,12 @@ name: CI
 on:
   push:
   pull_request:
+  workflow_dispatch:
+    inputs:
+      enable_tmate:
+        description: "Start a tmate debug session in the test job"
+        required: false
+        default: "false"
 
 env:
   CHECK_MERMAID: ${{ vars.CHECK_MERMAID }}
@@ -79,7 +85,7 @@ jobs:
       matrix:
         include:
           - name: x86_64-linux (NixOS, self-hosted)
-            runner: [self-hosted, nixos, x86-64-v3, microvm]
+            runner: [self-hosted, nixos, x86-64-v3, microvm, banica]
             allowedToFail: false
           # - name: aarch64-darwin (macOS, GitHub-hosted)
           #   runner: macos-latest
@@ -147,6 +153,42 @@ jobs:
       #
       # - run: sudo just start-ah-fs-snapshots-daemon
 
+      - name: Ensure tmate binaries (NixOS)
+        if: ${{ runner.os == 'Linux' }}
+        run: nix profile install nixpkgs#tmate nixpkgs#openssh
+
+      - name: Add nix profile bin to PATH
+        if: ${{ runner.os == 'Linux' }}
+        run: echo "$HOME/.nix-profile/bin" >> "$GITHUB_PATH"
+
+      # - name: Open tmate session (debug)
+      #   if: ${{ always() }}
+      #   uses: mxschmitt/action-tmate@v3
+      #   with:
+      #     detached: true
+      #     sudo: false
+      #     install-dependencies: false
+      #   timeout-minutes: 90
+
+      - name: Open tmate session (debug)
+        if: ${{ always() }}
+        env:
+          TMUX_TMPDIR: /tmp
+        run: |
+          set -euo pipefail
+          # export TMATE_SOCKET="${{ runner.temp }}/tmate.sock"
+          export TMATE_SOCKET="tmate.sock"
+          echo "$TMATE_SOCKET" 1>&2
+          echo "alo da"
+          echo "alo ne"
+          tmate -V
+          script -q -e -c "
+            tmate -S 'tmate.sock' new-session -d
+            tmate -S 'tmate.sock' wait tmate-ready
+            echo \"ssh: \$(tmate -S 'tmate.sock' display -p '#{tmate_ssh}')\" | tee -a \"\$GITHUB_STEP_SUMMARY\"
+            echo \"web: \$(tmate -S 'tmate.sock' display -p '#{tmate_web}')\" | tee -a \"\$GITHUB_STEP_SUMMARY\"
+            sleep 600
+          "
       - name: Run tests
         run: just test-rust-verbose
 
