--- a/crates/ah-command-trace-e2e-tests/Cargo.toml
+++ b/crates/ah-command-trace-e2e-tests/Cargo.toml
@@ -28,6 +28,7 @@ tokio = { version = "1.0", features = [
 ] }
 futures = "0.3"
 ah-command-trace-proto = { path = "../ah-command-trace-proto" }
+ah-command-trace-server = { path = "../ah-command-trace-server" }
 
 # macOS-specific dependencies
 [target.'cfg(target_os = "macos")'.dependencies]
