--- a/crates/ah-command-trace-e2e-tests/Cargo.toml
+++ b/crates/ah-command-trace-e2e-tests/Cargo.toml
@@ -13,6 +13,10 @@ edition = "2021"
 name = "test_helper"
 path = "src/bin/test_helper.rs"
 
+[[bin]]
+name = "spawn_tree"
+path = "src/bin/spawn_tree.rs"
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -27,6 +31,7 @@ tokio = { version = "1.0", features = [
   "macros",
 ] }
 futures = "0.3"
+libc = "0.2"
 ah-command-trace-proto = { path = "../ah-command-trace-proto" }
 ah-command-trace-server = { path = "../ah-command-trace-server" }
 
