--- a/crates/ah-command-trace-shim/Cargo.toml
+++ b/crates/ah-command-trace-shim/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["dylib"]
 
 [dependencies]
 ctor = "0.2"
@@ -30,6 +30,7 @@ tokio = { version = "1.0", features = [
 ] }
 tempfile = "3"
 ah-command-trace-proto = { path = "../ah-command-trace-proto" }
+ah-command-trace-client = { path = "../ah-command-trace-client" }
 
 # macOS-specific dependencies
 [target.'cfg(target_os = "macos")'.dependencies]
@@ -42,4 +43,3 @@ scopeguard = "1.2"
 nix = { version = "0.29", features = ["process", "signal"] }
 
 [dev-dependencies]
-ah-command-trace-shim = { path = "." }
