--- a/crates/ah-fs-snapshots/Cargo.toml
+++ b/crates/ah-fs-snapshots/Cargo.toml
@@ -21,6 +21,12 @@ libc = "0.2"
 agentfs-daemon = { path = "../agentfs-daemon", optional = true }
 agentfs-interpose-e2e-tests = { path = "../agentfs-interpose-e2e-tests", optional = true }
 agentfs-proto = { path = "../agentfs-proto", optional = true }
+chrono = { workspace = true, features = ["serde"] }
+dirs = { workspace = true }
+ah-fs-snapshots-daemon = { path = "../ah-fs-snapshots-daemon" }
+
+[target.'cfg(target_os = "macos")'.dependencies]
+agentfs-interpose-e2e-tests = { path = "../agentfs-interpose-e2e-tests" }
 agentfs-client = { path = "../agentfs-client" }
 
 [dev-dependencies]
@@ -35,30 +41,18 @@ fs-snapshots-test-harness = { path = "../../tests/fs-snapshots-test-harness", de
 ] }
 
 [features]
-default = ["zfs", "btrfs", "git"]
-zfs = ["ah-fs-snapshots-zfs"]
-btrfs = ["ah-fs-snapshots-btrfs"]
-git = ["ah-fs-snapshots-git"]
+default = ["git", "zfs", "btrfs", "agentfs"]
+zfs = []
+btrfs = []
+git = []
 agentfs = [
   "dep:agentfs-daemon",
   "dep:agentfs-proto",
   "dep:agentfs-interpose-e2e-tests",
 ]
 
-[dependencies.ah-fs-snapshots-btrfs]
-path = "../ah-fs-snapshots-btrfs"
-optional = true
-
 [dependencies.ah-core]
 path = "../ah-core"
 
 [dependencies.ah-fs-snapshots-traits]
 path = "../ah-fs-snapshots-traits"
-
-[dependencies.ah-fs-snapshots-zfs]
-path = "../ah-fs-snapshots-zfs"
-optional = true
-
-[dependencies.ah-fs-snapshots-git]
-path = "../ah-fs-snapshots-git"
-optional = true
