--- a/crates/ah-command-trace-shim/Cargo.toml
+++ b/crates/ah-command-trace-shim/Cargo.toml
@@ -10,16 +10,16 @@ edition = "2021"
 crate-type = ["dylib"]
 
 [dependencies]
-ctor = "0.2"
+ctor = { workspace = true }
 once_cell = "1.19"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = { workspace = true }
+serde_json = { workspace = true }
 thiserror = "1.0"
 libc = "0.2"
 ethereum_ssz = "0.8"
 ethereum_ssz_derive = "0.8"
 hex = "0.4"
-redhook = "2.0"
+redhook = { workspace = true }
 tokio = { version = "1.0", features = [
   "net",
   "io-util",
@@ -36,7 +36,7 @@ ah-command-trace-client = { path = "../ah-command-trace-client" }
 [target.'cfg(target_os = "macos")'.dependencies]
 core-foundation = "0.10"
 core-foundation-sys = "0.8"
-scopeguard = "1.2"
+scopeguard = { workspace = true }
 
 # Linux-specific dependencies
 [target.'cfg(target_os = "linux")'.dependencies]
