--- a/crates/ah-mux/Cargo.toml
+++ b/crates/ah-mux/Cargo.toml
@@ -18,6 +18,7 @@ serde_json = "1.0"
 async-trait = "0.1"
 tempfile = "3.0"
 crossterm = { workspace = true }
+tracing = { workspace = true }
 
 [features]
 default = [
