--- a/crates/ah-command-trace-shim/Cargo.toml
+++ b/crates/ah-command-trace-shim/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 [lib]
 crate-type = ["dylib"]
 
+[build-dependencies]
+cc = "1.0"
+
 [dependencies]
 ctor = { workspace = true }
 once_cell = "1.19"
