--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -4,4 +4,8 @@
 [toolchain]
 channel = "stable"
 components = ["rustfmt", "clippy"]
-targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin"]
+targets = [
+  "x86_64-unknown-linux-gnu",
+  "aarch64-apple-darwin",
+  "arm64e-apple-darwin",
+]
