build(ah-mux): Install `serial_test`

--- a/crates/ah-mux/Cargo.toml
+++ b/crates/ah-mux/Cargo.toml
@@ -19,6 +19,7 @@ async-trait = "0.1"
 tempfile = "3.0"
 crossterm = { workspace = true }
 tracing = { workspace = true }
+serial_test = "3"
 
 [features]
 default = [
