feat(tui,ah-core): The initial version of the agent catalog

--- a/crates/ah-core/Cargo.toml
+++ b/crates/ah-core/Cargo.toml
@@ -71,3 +71,6 @@ vim = ["ah-mux/vim"]
 neovim = ["ah-mux/neovim"]
 emacs = ["ah-mux/emacs"]
 iterm2 = ["ah-mux/iterm2"]
+
+[dev-dependencies]
+mockall = "0.12"
