--- a/crates/ah-domain-types/Cargo.toml
+++ b/crates/ah-domain-types/Cargo.toml
@@ -15,6 +15,7 @@ clap = { workspace = true, features = ["derive"] }
 tracing = { workspace = true }
 utoipa = { version = "4.0", optional = true }
 validator = { version = "0.18", features = ["derive"] }
+strum = { version = "0.26", features = ["derive"] }
 
 [features]
 default = []
