feat(fuse): finalize F7 stress harness - Added agentfs-fuse-stress workload CLI plus `just test-fuse-stress` harness covering concurrency, fd exhaustion, and crash recovery phases with structured logs. - wired FsCore fault injection + control-plane commands, mapped FsError to errno, and improved HostFs backend to surface EMFILE/ENOSPC cleanly. - Documented verification results (logs/fuse-stress-20251119-151555/summary.json) and updated specs/notes so F7 milestone is closed.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ members = [
   "crates/agentfs-control-cli",
   "crates/agentfs-client",
   "crates/agentfs-fuse-host",
+  "crates/agentfs-fuse-stress",
   "crates/agentfs-winfsp-host",
   "crates/agentfs-fskit-host",
   "crates/agentfs-backstore-macos",
