--- a/crates/agentfs-backstore-macos/Cargo.toml
+++ b/crates/agentfs-backstore-macos/Cargo.toml
@@ -11,6 +11,7 @@ agentfs-core = { path = "../agentfs-core" }
 tempfile = "3.0"
 proptest = { version = "1.0", optional = true }
 libc = "0.2"
+tracing = "0.1"
 
 [dev-dependencies]
 proptest = "1.0"
