--- a/crates/agentfs-fskit-bridge/Cargo.toml
+++ b/crates/agentfs-fskit-bridge/Cargo.toml
@@ -29,6 +29,8 @@ path = "../agentfs-fskit-sys"
 
 [build-dependencies]
 cc = "1.0"
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [features]
 # Feature to enable linking against the sys crate (disabled by default for testing)
