--- a/crates/agentfs-fskit-sys/Cargo.toml
+++ b/crates/agentfs-fskit-sys/Cargo.toml
@@ -17,3 +17,7 @@ libc = "0.2"
 
 [build-dependencies]
 cc = "1.0"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", default-features = false, features = [
+  "fmt",
+] }
