--- a/tests/agentfs-daemon-backstore-integration/Cargo.toml
+++ b/tests/agentfs-daemon-backstore-integration/Cargo.toml
@@ -17,6 +17,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 thiserror = { workspace = true }
 libc = { workspace = true }
 ssz = { package = "ethereum_ssz", version = "0.8" }
