--- a/tests/overlay-enforcement/Cargo.toml
+++ b/tests/overlay-enforcement/Cargo.toml
@@ -23,5 +23,6 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
