refactor: Eliminate duplicate types by introducing canonical types in ah-domain-types (R25)

--- a/crates/ah-agents/Cargo.toml
+++ b/crates/ah-agents/Cargo.toml
@@ -17,6 +17,7 @@ tracing = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 async-trait = "0.1"
+ah-domain-types = { path = "../ah-domain-types" }
 
 # Additional dependencies for agent management
 tar = "0.4"
