--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -26,7 +26,7 @@ ratatui = "0.29"
 
 # AH core dependencies
 ah-core = { path = "../ah-core" }
-ah-domain-types = { path = "../ah-domain-types" }
+ah-domain-types = { path = "../ah-domain-types", features = ["clap"] }
 ah-logging = { path = "../ah-logging" }
 ah-repo = { path = "../ah-repo" }
 ah-local-db = { path = "../ah-local-db" }
@@ -57,6 +57,9 @@ uuid = { workspace = true }
 # AgentFS dependencies
 agentfs-proto = { path = "../agentfs-proto" }
 ah-fs-snapshots = { path = "../ah-fs-snapshots" }
+ah-fs-snapshots-traits = { path = "../ah-fs-snapshots-traits", features = [
+  "clap",
+] }
 
 # UI and TUI dependencies
 ah-tui = { path = "../ah-tui" }
