--- a/crates/ah-fs-snapshots-traits/Cargo.toml
+++ b/crates/ah-fs-snapshots-traits/Cargo.toml
@@ -14,3 +14,8 @@ tracing.workspace = true
 anyhow.workspace = true
 thiserror.workspace = true
 async-trait = "0.1"
+clap = { workspace = true, optional = true }
+
+[features]
+default = []
+clap = ["dep:clap"]
