--- a/crates/ah-command-trace-e2e-tests/Cargo.toml
+++ b/crates/ah-command-trace-e2e-tests/Cargo.toml
@@ -17,6 +17,10 @@ path = "src/bin/test_helper.rs"
 name = "spawn_tree"
 path = "src/bin/spawn_tree.rs"
 
+[[bin]]
+name = "mixed_output"
+path = "src/bin/mixed_output.rs"
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
