--- a/crates/agentfs-interpose-shim/Cargo.toml
+++ b/crates/agentfs-interpose-shim/Cargo.toml
@@ -19,7 +19,7 @@ libc = "0.2"
 ethereum_ssz = "0.8"
 ethereum_ssz_derive = "0.8"
 hex = "0.4"
-redhook = "2.0"
+stackable-interpose = { workspace = true }
 agentfs-proto = { path = "../agentfs-proto" }
 agentfs-client = { path = "../agentfs-client" }
 tempfile = "3"
