--- a/crates/ah-command-trace-shim/Cargo.toml
+++ b/crates/ah-command-trace-shim/Cargo.toml
@@ -22,7 +22,7 @@ libc = "0.2"
 ethereum_ssz = "0.8"
 ethereum_ssz_derive = "0.8"
 hex = "0.4"
-redhook = { workspace = true }
+stackable-interpose = { workspace = true }
 tokio = { version = "1.0", features = [
   "net",
   "io-util",
