--- a/crates/ah-recorder/Cargo.toml
+++ b/crates/ah-recorder/Cargo.toml
@@ -16,6 +16,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
+tracing-subscriber = "0.3"
 chrono = { workspace = true }
 
 # Agent Harbor workspace crates
