feat(fuse-f10): add security harnesses and permission hardening - Added F10 security harness suite (permissions, privileges, input validation, sandbox, robustness) plus Just/CI wiring and logs recorded. - Hardened permission defaults and symlink handling to honor root_bypass_permissions and reject escape paths; mount default_permissions only when configured. - Updated F10 plan/status docs with passing log references for new suites.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -213,6 +213,17 @@ jobs:
           just test-fuse-mount-options
           just test-fuse-advanced-io
 
+      - name: Run F10 security harnesses
+        env:
+          SKIP_FUSE_BUILD: 1
+        run: |
+          set -euo pipefail
+          just test-fuse-security-permissions
+          just test-fuse-security-privileges
+          just test-fuse-security-input
+          just test-fuse-security-sandbox
+          just test-fuse-security-robustness
+
       - name: Run FUSE performance harness
         env:
           SKIP_FUSE_BUILD: 1
