feat(lychee): Update link checker configuration with site

--- a/.lychee.toml
+++ b/.lychee.toml
@@ -1,7 +1,7 @@
 # Copyright 2025 Schelling Point Labs Inc
 # SPDX-License-Identifier: AGPL-3.0-only
 
-include = ["specs/**/*.md"]
+include = ["specs/**/*.md", "docs/site/**/*.mdx"]
 exclude = [
   # Vendor directory (external dependencies, not our code)
   ".*/vendor/.*",
