build(direnv): Ensure all Nix files are watched for changes
Before this change, if changes to `nix/pre-commit.nix` did
not cause direnv to reload the config.

--- a/.envrc
+++ b/.envrc
@@ -12,4 +12,7 @@ fi
 
 dotenv_if_exists
 
+# shellcheck disable=SC2046
+watch_file $(find ./nix/ -name "*.nix")
+
 use flake . --accept-flake-config
