--- a/tests/fs-snapshots-test-harness/Cargo.toml
+++ b/tests/fs-snapshots-test-harness/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 anyhow.workspace = true
 tempfile.workspace = true
 tracing.workspace = true
+tracing-subscriber.workspace = true
 tokio = { workspace = true, features = [
   "process",
   "rt-multi-thread",
