--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "knip": "^5.64.1",
     "prettier": "3.6.2",
     "typescript": "5.9.3",
-    "vite": "^7.1.9"
+    "vite": "^7.1.9",
+    "wrangler": "^4.49.1"
   },
   "dependencies": {
     "solid-js": "^1.9.9"
