fix(rust-test): Fix test failures on macOS

--- a/crates/ah-fs-snapshots/Cargo.toml
+++ b/crates/ah-fs-snapshots/Cargo.toml
@@ -33,6 +33,7 @@ agentfs-client = { path = "../agentfs-client" }
 regex = "1.10"
 libc = "0.2"
 ah-repo = { path = "../ah-repo" }
+ah-logging = { path = "../ah-logging", features = ["test-utils"] }
 fs-snapshots-test-harness = { path = "../../tests/fs-snapshots-test-harness", default-features = false, features = [
   "git",
   "zfs",
