--- a/tests/fs-snapshots-test-harness/Cargo.toml
+++ b/tests/fs-snapshots-test-harness/Cargo.toml
@@ -53,7 +53,9 @@ path = "../../crates/agentfs-interpose-e2e-tests"
 
 [dev-dependencies]
 assert_cmd = "2.0"
+regex = "1.0"
 tokio = { workspace = true, features = ["rt", "macros", "process"] }
+ah-logging = { path = "../../crates/ah-logging", features = ["test-utils"] }
 
 [features]
 default = ["git"]
