feat(ah-agents): resolve full binary paths using which
All agent implementations now use the 'which' crate to resolve full binary
paths during initialization instead of relying on simple binary names.

Changes:
- Added 'which' 6.0 as a dependency in ah-agents/Cargo.toml
- Updated all agent constructors (CodexAgent, ClaudeAgent, CursorAgent,
  GeminiAgent, CopilotAgent) to call which::which() in their new() methods
- Each agent falls back to the simple binary name if 'which' fails to find
  the executable, maintaining backward compatibility

Benefits:
- More explicit and robust: uses absolute paths when available
- Eliminates ambiguity about which binary will be executed
- Still gracefully handles cases where the binary is not in PATH
- Improves debugging by making the resolved path visible in error messages

The implementation pattern used across all agents:
  let binary_path = which::which("binary_name")
      .ok()
      .and_then(|p| p.to_str().map(|s| s.to_string()))
      .unwrap_or_else(|| "binary_name".to_string());

All existing tests continue to pass (125 tests), confirming backward
compatibility is maintained.

--- a/crates/ah-agents/Cargo.toml
+++ b/crates/ah-agents/Cargo.toml
@@ -27,6 +27,7 @@ regex = "1.10"
 chrono = "0.4"
 rusqlite = { version = "0.37", features = ["bundled"] }
 ureq = "2.9"
+which = "6.0"
 reqwest = { workspace = true, features = ["json"] }
 tempfile = "3.8"
 
