fix(core): align defaults and symlink checks - Restore SecurityPolicy defaults to match main (POSIX enforcement off by default, root bypass opt-in) and add a test that ../ symlink targets are rejected while safe relatives still work. - Core and FFI unit suites now pass; reran FUSE verification harnesses F1–F10 except F6/F9 (basic, negative, overlay, control-plane, mount variants, xattrs, mknod, advanced I/O, stress, security) with fresh logs under logs/. - Known skips: tmux/git snapshot/command-trace suites and performance harness F6 remain outside this run.

--- a/crates/agentfs-daemon/Cargo.toml
+++ b/crates/agentfs-daemon/Cargo.toml
@@ -10,6 +10,9 @@ edition = "2021"
 name = "agentfs-daemon"
 path = "src/bin/agentfs-daemon.rs"
 
+[lib]
+doctest = false
+
 [dependencies]
 agentfs-core = { path = "../agentfs-core" }
 agentfs-proto = { path = "../agentfs-proto" }
