fix: clean fuse lint fallout
- aligned fuse host adapter with clippy (leaner handle tracking, open options/xattr fixes, dead code removal)

- hardened agentfs-core defaults/permission masks using libc constants

- fuse stress JSON output helper and lychee Apple doc excludes

--- a/.lychee.toml
+++ b/.lychee.toml
@@ -74,6 +74,10 @@ exclude = [
   "https://formulae.brew.sh/.*",
   "https://www.electronjs.org/.*",
   "https://microvm-nix.github.io/.*",
+  # Flaky TLS on Arch Linux man mirror
+  "https://man.archlinux.org/.*",
+  # Apple developer docs often fail TLS/redirect checks in CI
+  "https://developer.apple.com/.*",
 ]
 max_concurrency = 8
 timeout = 20
