ci(gh-actions): Remove wronge runner tag on `fuse-harness` job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,7 +159,7 @@ jobs:
   fuse-harness:
     name: FUSE harness
     needs: test
-    runs-on: [self-hosted, nixos, x86-64-v3, microvm, fine-tuned-systemd-sandbox]
+    runs-on: [self-hosted, nixos, x86-64-v3, microvm]
 
     steps:
       - name: Test passwordless `sudo`
