chore(ci): harden fuse harness
- fuse mount script retries without allow_other and supports fallback env

- run fuse-harness without waiting for rust tests; set allow_other=0 in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,8 +158,9 @@ jobs:
 
   fuse-harness:
     name: FUSE harness
-    needs: test
     runs-on: [self-hosted, nixos, x86-64-v3, microvm]
+    env:
+      AGENTFS_FUSE_ALLOW_OTHER: 0
 
     steps:
       - uses: actions/checkout@v5
