--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,7 +158,7 @@ jobs:
 
   fuse-harness:
     name: FUSE harness
-    runs-on: [self-hosted, nixos, x86-64-v3, fine-tuned-systemd-sandbox]
+    runs-on: [self-hosted, nixos, x86-64-v3]
     env:
       AGENTFS_FUSE_ALLOW_OTHER: 0
 
@@ -318,7 +318,7 @@ jobs:
   pjdfstest:
     name: pjdfstest suite
     needs: fuse-harness
-    runs-on: [self-hosted, nixos, x86-64-v3, fine-tuned-systemd-sandbox]
+    runs-on: [self-hosted, nixos, x86-64-v3]
 
     steps:
       - name: Test passwordless `sudo`
